nohup.out
gcc main.c sprite.c timer.c keyboard_input.c -w -lSDL2 -lSDL2_image -lSDL2_ttf -o myGame && ./myGame
168
73
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
gcc main.c sprite.c timer.c keyboard_input.c -w -lSDL2 -lSDL2_image -lSDL2_ttf -o myGame && ./myGame
main.c:19:33: error: unknown type name ‘s’
 SDL_Renderer* gRenderer = NULL; s
                                 ^
main.c:21:10: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 TTF_Font *gFont = NULL;
          ^
make: *** [all] Error 1
